syntax = "proto3";

package pb;

option go_package = 'fiberinventory/internal/pb';

import "user.proto";

message SignUpUserInput{
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message SignInUserInput{
    string email = 1;
    string password = 2;
}


message SignInUserResponse{
    string status = 1;
    string token = 2;
}

message SignUpUserResponse{
    User user = 1;
}


service AuthService{
    rpc RegisterUser(SignUpUserInput) returns (SignUpUserResponse){}
    rpc LoginUser(SignInUserInput) returns (SignInUserResponse){}
}

